--- a/fatogo_RDB/templates/hotel_page/hotel_main.html
+++ b/fatogo_RDB/templates/hotel_page/hotel_main.html
@@ -35,7 +35,7 @@
 
   <header>
     <h1>
-      <a href="../" title="Fatogo">Fatogo test1</a><!-- 1.main_page 폴더의 index.html 파일로 이동함-->
+      <a href="../../" title="Fatogo">Fatogo test1</a><!-- 1.main_page 폴더의 index.html 파일로 이동함-->
     </h1>
   </header>
 
