--- a/fatogo_RDB/templates/bill_page/bill.html
+++ b/fatogo_RDB/templates/bill_page/bill.html
@@ -39,7 +39,7 @@
   <!-- 맨 위의 헤더 -->
   <header>
     <h1>
-      <a href="../../" title="Fatogo">Fatogo</a><!-- 1.main_page 폴더의 index.html 파일로 이동함-->
+      <a href="../../../" title="Fatogo">Fatogo</a><!-- 1.main_page 폴더의 index.html 파일로 이동함-->
     </h1>
   </header>
 
